argocd/apps/utilities/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: utilities
  labels:
    app.kubernetes.io/name: keycloak
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.drewpayment.com"
    external-dns.home.arpa/enabled: "true"
spec:
  ingressClassName: external
  rules:
    - host: &host "id.drewpayment.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
  tls:
    - hosts:
      - *host
